@@ -42,6 +42,8 @@ in some cases.
 +Fix issue with window not being brought to front in all cases when opening
 file with "Edit with Editra..." shortcut on Windows.
 +Fix issue with showing calltips for buffers that are not visible.
++Handle OverflowError that could occur when too large a value was passed to the
+busy indicator.
 
 #-----------------------------------------------------------------------------#
 VERSION 0.6.00
